<resources>
    <string name="app_name">Expanse tracker</string>
    <string name="converter">Converter</string>
    <string name="chart">Chart</string>
    <string name="compare">Compare</string>
    <string name="more">More</string>
    <string name="last_update_dec_13_2020_7_19_pm">Last Update: Dec/13/2020, 7:19 PM</string>
    <string name="_19">19</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="important_information">Important Information</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="currency_profile">Currency Profile</string>
    <string name="decimal_places">Decimal Places</string>
    <string name="rate_display">Rate Display</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="security">Security</string>
    <string name="profile">Profile</string>
</resources>