<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:background="@drawable/actionbar_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragmentname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/converter"
                android:textColor="@color/white"
                android:layout_gravity="center"
                style="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:id="@+id/updatetime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:visibility="visible"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/circle_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_19"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/last_update_dec_13_2020_7_19_pm"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:id="@+id/mainframe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="@drawable/icon_color"
        app:itemIconTint="@drawable/icon_color"
        android:splitMotionEvents="true"
        tools:targetApi="lollipop" />


</LinearLayout>