<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52D8D7D7"
    android:orientation="vertical"
    tools:context=".CurrencyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/activityname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/currency_profile"
            android:textColor="@color/black"
            android:textSize="17sp" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="3dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_dollar"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/decimal_places"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="55dp"
                android:background="#4A000000" />

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="3dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_settings_line"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/rate_display"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_right" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>