<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52D8D7D7"
    tools:context=".MoreFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:paddingHorizontal="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_money"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/currency_profile"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_right" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="55dp"
                android:background="#4A000000" />

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:paddingHorizontal="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_settings"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/settings"
                    android:layout_marginStart="12dp"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="55dp"
                android:background="#4A000000" />

            <LinearLayout
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:paddingHorizontal="3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_help"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/help"
                    android:gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:textSize="15sp"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="55dp"
                android:background="#4A000000" />

            <LinearLayout
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:paddingHorizontal="3dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_money"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/important_information"
                    android:layout_marginStart="12dp"
                    android:textSize="15sp"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/ic_right" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>